--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>JS + CSS Clock</title>
-  <link rel="icon" href="https://fav.farm/🔥" />
+  <link rel="icon" href="https://fav.farm/🤷‍♂️" />
 </head>
 <body>
 
@@ -63,12 +63,34 @@
       background: black;
       position: absolute;
       top: 50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      transition: all 0.05s;
+      transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
     }
 
   </style>
 
   <script>
+    const hourHand = document.querySelector('.hour-hand');
+    const minHand = document.querySelector('.min-hand');
+    const secondHand = document.querySelector('.second-hand');
+    function setDate(){
+      const now = new Date();
+      const second = now.getSeconds();
+      const secondDegree = ((second/60) *360)+90;
 
+      const min = now.getMinutes();
+      const minDegree = ((min/60) *360)+90;
+
+      const hour = now.getHours();
+      const hourDegree = ((hour/12)*360)+90;
+
+      hourHand.style.transform = `rotate(${hourDegree}deg)`;
+      minHand.style.transform = `rotate(${minDegree}deg)`;
+      secondHand.style.transform = `rotate(${secondDegree}deg)`;
+    };
+    setInterval(setDate,1000);
 
   </script>
 </body>
